Fix z-index layers des tooltips

--- a/styles/less/includes/general-classes.less
+++ b/styles/less/includes/general-classes.less
@@ -132,16 +132,12 @@ pre {
 // Tooltips
 .tooltip {
 	&.calendar-tooltip, &.museum-tooltip, &.bundle-tooltip {
+		&:hover {
+			z-index: 1;
+		}
+
 		& > span {
 			bottom: 0;
-		}
-
-		img {
-			z-index: 3;
-		}
-
-		.left, .right {
-			z-index: 5;
 		}
 	}
 
@@ -190,11 +186,13 @@ pre {
                	&.left {
                	    left: auto;
                	    right: 100%;
+					z-index: 1;
                	}
 
                	&.right {
                	    left: 100%;
                	    right: auto;
+					z-index: 1;
                	}
             }
         }
